# Barcode-Generator

./: CMakeLists.txt  Main.qml  README.md  barcodegenerator.cpp  barcodegenerator.h  barcodeimageprovider.cpp  barcodeimageprovider.h  main.cpp  symbologies.cpp  symbologies.h
